# indy-sdk

./: .gitattributes  .gitignore  .project  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  Jenkinsfile  Jenkinsfile.cd  Jenkinsfile.ci  Jenkinsfile.cov  JenkinsfileJava  LICENSE  MAINTAINERS.md  README.md  build-libindy-core-ios.sh  build-libsovrin-core-ios.sh  build.rs  cicd.md  conf.py  docker-compose.yml  libindy.Dockerfile  libindy.Dockerfile.dockerignore  libvcx.Dockerfile  vcx.Dockerfile.dockerignore  vcxagency.Dockerfile
cli/: Cargo.toml  README.md  __main__.py  build.rs  cli.dockerfile  docker_pool_transactions_genesis  linux-sample-config.json  log4rs.yml  logger.yml  pool_transactions_genesis  setup.py
cli/ci/: indy-cli-deb-build-and-upload.sh  indy-cli-win-zip-and-upload.sh  libindy-cli-win-zip-and-upload.sh
cli/debian/: changelog  control  indy-cli.install  libindy.install  rules
cli/rpm/: indy-cli.spec.in
cli/src/: application_context.rs  cli.py  command_executor.rs  constants.py  indy_context.rs  main.rs
cli/src/commands/: base_commands.py  command.py  common.rs  did.rs  ledger.rs  ledger_commands.py  mod.rs  payment_address.rs  pool.rs  pool_commands.py  signus_commands.py  wallet.rs  wallet_commands.py
cli/src/docs/: components.wsd
cli/src/handlers/: base_commands_handler.py  ledger_commands_handler.py  pool_commands_handler.py  signus_commands_handler.py  wallet_commands_handler.py
cli/src/libindy/: callbacks.rs  did.rs  ledger.rs  logger.rs  mod.rs  payment.rs  pool.rs  results.rs  wallet.rs
cli/src/utils/: cstring.rs  environment.py  environment.rs  errors.py  file.rs  history.rs  logger.rs  mod.rs  output.py  state.py  table.rs  term.rs  test.rs
cxs/libcxs/: Cargo.toml  build.rs
cxs/libcxs/include/: cxs.h
cxs/libcxs/sample_config/: config.json
cxs/libcxs/scripts/: postinst  provision_agent_keys.py
cxs/libcxs/src/: claim_def.rs  claim_request.rs  connection.rs  issuer_claim.rs  lib.rs  proof.rs  proof_compliance.rs  proof_offer.rs  schema.rs  settings.rs
cxs/libcxs/tests/: claim_def_dep.rs  demo.rs  demo_with_composite.rs  end_to_end.rs  libcxs.rs  mock_tests.rs  watermark.rs
experimental/plugins/postgres_storage/: Cargo.toml  README.md  cli_ps_create.txt  cli_ps_test.txt  postgres-cli-test.sh  postgres-getting-started-multi.sh  postgres-getting-started.sh  postgres-perf-multi.sh  start_postgres.sh
indy-sdk-sys/: Cargo.toml  build.rs
indy-sdk-sys/src/: crypto.rs  ledger.rs  lib.rs
indy-sdk-sys/src/utils/: mod.rs
indy-sdk-wrapper/: Cargo.toml
indy-sdk-wrapper/src/: lib.rs
libindy/: Cargo.toml  README.md  android.build.sh  android.test.sh  build-libindy-android.sh  build-libindy-core-ios.sh  build-libindy-ios.sh  build-libindy-ubuntu-with-docker.sh  build-libindy-ubuntu.dockerfile  build.rs  changelog  docker-compose.yml  ga-android.build.sh  mac.build.sh  run-on-android.sh  test.txt
libindy-sys/: Cargo.toml
libindy-sys/src/: anoncreds.rs  blob_storage.rs  crypto.rs  did.rs  ledger.rs  lib.rs  non_secrets.rs  pairwise.rs  payments.rs  pool.rs  wallet.rs
libindy/.cargo/: config
libindy/benches/: wallet.rs
libindy/build_scripts/: Dockerfile.ubuntu1604  make-docker.sh
libindy/build_scripts/android/: android-build-env.dockerfile  build.dependencies.locally.sh  build.nondocker.sh  build.sh  build.withoutdocker.sh  build_arm.sh  build_arm64.sh  build_x86.sh  (+1 more)
libindy/ci/: alpine.dockerfile  amazon.dockerfile  android.dockerfile  android.prepare.sh  buildAndroid.sh  centos.dockerfile  indy-sdk.spec.in  libindy-deb-build-and-upload.sh  libindy-rpm-build-and-upload.sh  libindy-win-zip-and-upload.sh  libindy.spec.in  setup.android.env.sh  ubuntu.dockerfile  ubuntu18.dockerfile
libindy/debian/: changelog  control  libindy-dev.install  libindy.install  rules
libindy/include/: indy_agent.h  indy_anoncreds.h  indy_blob_storage.h  indy_cache.h  indy_core.h  indy_crypto.h  indy_did.h  indy_ledger.h  indy_logger.h  indy_metrics.h  indy_mod.h  indy_non_secrets.h  indy_pairwise.h  indy_payment.h  indy_pool.h  indy_signus.h  indy_types.h  indy_wallet.h
libindy/indy-api-types/: Cargo.toml
libindy/indy-utils/: Cargo.toml
libindy/indy-wallet/: Cargo.toml
libindy/libnullpay/: Cargo.toml
libindy/out_libindy_pod/: indy_ledger.h
libindy/rpm/: libindy.spec.in
libindy/src/: lib.rs
libindy/tests/: agent.rs  anoncreds.rs  anoncreds_demos.rs  authz.rs  cache.rs  crypto.rs  demo.rs  did.rs  error.rs  indy.rs  interaction.rs  ledger.rs  logger.rs  logger_lvl.rs  metrics.rs  non_secrets.rs  pairwise.rs  payments.rs  pool.rs  signus.rs  sss.rs  wallet.rs
libindy/tests2/: crypto.rs  did.rs  non_secrets.rs
libnullpay/: Cargo.toml  README.md  android.build.sh  android.test.sh  build-libnullpay-android.sh  build.rs
libnullpay/ci/: libnullpay-deb-build-and-upload.sh  libnullpay-win-zip-and-upload.sh
libnullpay/debian/: changelog  control  copyright  libindy.install  libnullpay.install
libnullpay/include/: nullpay.h  nullpay_mod.h  nullpay_plugin.h
libnullpay/rpm/: libnullpay.spec.in
libnullpay/src/: lib.rs  payment_method.rs
libnullpay/tests/: payments.rs
libvcx/: Cargo.toml  android_build.sh  build.rs
libvcx/build_scripts/: libindy.commit.sha1.hash.txt
libvcx/include/: vcx.h
libvcx/sample_config/: log4rs.yml
libvcx/scripts/: postinst  postrm  provision_agent_keys.py
libvcx/src/: claim.rs  claim_def.rs  claim_request.rs  connection.rs  credential.rs  credential_def.rs  credential_request.rs  disclosed_proof.rs  issuer_claim.rs  issuer_credential.rs  lib.rs  proof.rs  proof_compliance.rs  schema.rs  settings.rs
libvcx/tests/: claim_def_dep.rs  demo.rs  demo_with_composite.rs  internals_demo.rs
scripts/test_zmq/: Cargo.toml  README.md  build.rs
vcx/dummy-cloud-agent/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.json  docker-compose.yml  dockerbuild.sh  sample-config.json
vcx/libvcx/: .swp  Cargo.toml  android.build.sh  android.test.sh  android_build.sh  build.rs  install_toolchains.sh
wrappers/rust/: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs
(+5262 files in other folders)
