[package]
name = "indy-cli"
version = "1.5.0"
authors = ["Vyacheslav Gudkov <vyacheslav.gudkov@dsr-company.com>"]

[features]
nullpay_plugin = []

# Causes the build to fail on all warnings
fatal_warnings = []

[dependencies]
ansi_term = "0.10"
chrono = "0.4"
env_logger = "0.4"
unescape = "0.1"
lazy_static = "0.2"
libc = "0.2"
libloading = "0.5.0"
linefeed = "0.3"
log = "0.3"
prettytable-rs = "0.6.7"
regex = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
term = "0.4.6"
rpassword = "1.0.0"
