[package]
name = "indy-cli"
version = "1.9.0"
authors = ["Vyacheslav Gudkov <vyacheslav.gudkov@dsr-company.com>"]

[features]
nullpay_plugin = []

# Causes the build to fail on all warnings
fatal_warnings = []

[dependencies]
atty = "0.2"
ansi_term = "0.11"
chrono = "0.4"
dirs = "1.0.4"
unescape = "0.1"
lazy_static = "0.2"
libc = "0.2"
libloading = "0.5.0"
linefeed = "0.3"
log = "0.4.1"
log4rs = "0.8.0"
prettytable-rs = "0.6.7"
regex = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
term = "0.4.6"
rpassword = "1.0.0"
indy = { version = "1.9.0", path = "../wrappers/rust/" }
