[package]
name = "indy-sdk-wrapper"
version = "0.1.0"
authors = ["Mike Lodder <redmike7@gmail.com"]
license = "Apache-2.0"
description = "Top level wrapper for indy-sdk FFI bindings"
readme = "README.md"
build = "build.rs"

[dependencies]
indy-sdk-sys = { version = "0.1.0", path = "../indy-sdk-sys" }

[lib]
name = "indywrapper"
path = "src/lib.rs"
crate-type = ["rlib"]
