[package]
name = "libindy-sys"
version = "0.1.4"
authors = ["Mike Lodder <redmike7@gmail.com"]
build = "build.rs"
links = "indy"
description = "FFI bindings for IndySDK. This is for those callers who don't link indy-sdk crate"

[build-dependencies]
pkg-config = "0.3.9"
regex = "1.0.0"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"
