[package]
name = "libindy"
version = "1.9.0"
authors = [
  "Sergej Pupykin <sergej.pupykin@dsr-company.com>",
  "Vyacheslav Gudkov <vyacheslav.gudkov@dsr-company.com>",
  "Artem Ivanov <artem.ivanov@dsr-company.com>",
  "Evgeniy Razinkov <evgeniy.razinkov@dsr-company.com.ru>",
  "Kirill Neznamov <kirill.neznamov@dsr-company.com>",
  "Sergey Minaev <sergey.minaev@dsr-company.com>"
  ]

description = "This is the official SDK for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org). The major artifact of the SDK is a c-callable library."
license = "MIT/Apache-2.0"
build = "build.rs"

[lib]
name = "indy"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["bn_openssl", "ed25519_sign_sodium", "ed25519_box_sodium", "sealedbox_sodium", "base58_rust_base58", "base64_rust_base64", "xsalsa20_sodium", "chacha20poly1305_ietf_sodium", "pair_amcl", "hash_openssl", "local_nodes_pool", "revocation_tests", "pwhash_argon2i13_sodium", "hmacsha256_sodium", "memzero_sodium", "randombytes_sodium"]
bn_openssl = ["openssl", "int_traits"]
ed25519_sign_sodium = ["sodiumoxide"]
ed25519_box_sodium = ["sodiumoxide"]
sealedbox_sodium = ["sodiumoxide"]
base58_rust_base58 = ["rust-base58"]
base64_rust_base64 = ["base64"]
xsalsa20_sodium = ["sodiumoxide"]
chacha20poly1305_ietf_sodium = ["sodiumoxide"]
pwhash_argon2i13_sodium = ["sodiumoxide"]
pair_amcl = ["ursa"]
hash_openssl = ["openssl"]
local_nodes_pool = []
revocation_tests = []
force_full_interaction_tests = []
sodium_static = []
hmacsha256_sodium = ["sodiumoxide"]
memzero_sodium = ["sodiumoxide"]
randombytes_sodium = ["sodiumoxide"]

# Causes the build to fail on all warnings
fatal_warnings = []

[dependencies]
int_traits = { version = "0.1.1", optional = true }
env_logger = "0.5.10"
errno = "0.2.3"
etcommon-rlp = "0.2.3"
failure = "0.1.3"
hex = "0.3.2"
libc = "0.2.21"
log = "0.4.1"
log-derive = "0.3.0"
derivative = "1.0.0"
dirs = "1.0.4"
openssl = { version = "=0.10.12", optional = true }
owning_ref = "0.4"
rand = "0.6.5"
rusqlite = "0.13.0" # Make sure rusqlite for android is also bumped with this. Rusqlite for android is at the bottom of this document.
libsqlite3-sys = "0.9.1"
rust-base58 = {version = "0.0.4", optional = true}
base64 = {version = "0.6.0", optional = true}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2 = "0.8"
sha3 = "0.8"
rmp-serde = "0.13.6"
sodiumoxide = {version = "0.0.16", optional = true}
time = "0.1.36"
threadpool = "1.7.1"
zmq = "0.8.2"
lazy_static = "1.0"
named_type = "0.1.3"
named_type_derive = "0.1.3"
byteorder = "1.0.0"
log-panics = "2.0.0"
zeroize = "0.9.1"
ursa = { version = "0.1.1", optional = true }

[dependencies.uuid]
version = "0.5.0"
default-features = false
features = ["v4"]

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.5"
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
rusqlite = { version = "0.13.0", features=["bundled"] }

[dev-dependencies]
criterion = "0.2"
indy = { path = "../wrappers/rust" }
indy-sys = { path = "../wrappers/rust/indy-sys" }
futures = "0.1.24"

[[bench]]
name = "wallet"
harness = false
