[package]
name = "libindy"
version = "1.16.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

description = "This is the official SDK for Hyperledger Indy (https://www.hyperledger.org/projects), which provides a distributed-ledger-based foundation for self-sovereign identity (https://sovrin.org). The major artifact of the SDK is a c-callable library."
license = "MIT/Apache-2.0"
build = "build.rs"

[lib]
name = "indy"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["base58_rust_base58", "pair_amcl", "local_nodes_pool", "revocation_tests"]
base58_rust_base58 = ["rust-base58"]
pair_amcl = ["ursa"]
local_nodes_pool = []
revocation_tests = []
force_full_interaction_tests = []
sodium_static = []
only_high_cases = []

# Causes the build to fail on all warnings
fatal_warnings = []

[dependencies]
env_logger = "0.7"
etcommon-rlp = "0.2.4"
failure = "0.1.7"
hex = "0.4.0"
libc = "0.2.66"
log = "0.4.8"
log-derive = "0.3.0"
derivative = "1.0.2"
backtrace = "=0.3.11"
rand = "0.7.0"
rust-base58 = {version = "0.0.4", optional = true}
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
sha2 = "0.9"
sha3 = "0.9"
rmp-serde = "0.13.7"
time = "0.1.42"
threadpool = "1.7.1"
zmq = "0.9.1"
lazy_static = "1.3"
byteorder = "1.3.2"
log-panics = "2.0.0"
zeroize = "1.1.0"
regex = "1.2.1"
indy-api-types = { path = "./indy-api-types"}
indy-utils = { path = "./indy-utils"}
indy-wallet = { path = "./indy-wallet"}
quote = "=1.0.7"
variant_count = "*"
num-traits = "0.2"
num-derive = "0.2"
convert_case = "0.3.2"

[dependencies.uuid]
version = "0.7.4"
default-features = false
features = ["v4"]

[dependencies.ursa]
version =  "0.3.2"
optional = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.5"

[dev-dependencies]
criterion = "0.2"
indy = { path = "../wrappers/rust" }
indy-sys = { path = "../wrappers/rust/indy-sys" }
futures = "0.1.28"
sodiumoxide = {version = "0.0.16"}
openssl = "0.10"
dirs = "2.0.2"

[[bench]]
name = "wallet"
harness = false

[package.metadata.deb]
extended-description = """\
This is the official SDK for Hyperledger Indy, which provides a \
distributed-ledger-based foundation for self-sovereign identity. \
The major artifact of the SDK is a c-callable library; there are \
also convenience wrappers for various programming languages. \
All bugs, stories, and backlog for this project are managed through \
Hyperledger's Jira in project IS (note that regular Indy tickets are \
in the INDY project instead...). Also, join us on Jira's Rocket.Chat \
at #indy-sdk to discuss."""
section = "devel"
priority = "optional"
maintainer-scripts = "./debian"
changelog = "./debian/changelog"

[package.metadata.deb.variants.libindy-xenial]
provides = "libindy (= 1.16.0)"
name = "libindy"
depends = "libzmq5, libsodium18, libssl1.0.0"
assets = [
    ["target/release/libindy.so", "usr/lib/", "644"],
]

[package.metadata.deb.variants.libindy-bionic]
provides = "libindy (= 1.16.0)"
name = "libindy"
depends = "libzmq5, libsodium23, libssl1.1"
assets = [
    ["target/release/libindy.so", "usr/lib/", "644"],
]

[package.metadata.deb.variants.libindy-dev-xenial]
provides = "libindy-dev (= 1.16.0)"
name = "libindy-dev"
depends = "libindy (= 1.16.0)"
assets = [
    ["include/*.h", "usr/include/indy/", "644"],
    ["target/release/libindy.a", "usr/lib/", "644"],
]

[package.metadata.deb.variants.libindy-dev-bionic]
provides = "libindy-dev (= 1.16.0)"
name = "libindy-dev"
depends = "libindy (= 1.16.0)"
assets = [
    ["include/*.h", "usr/include/indy/", "644"],
    ["target/release/libindy.a", "usr/lib/", "644"],
]
