[package]

name = "libvcx"
version = "0.1.2097319"
authors = [ "Mark Hadley <mark.hadley@evernym.com>" ]
publish = false
description = "C callable library for libvcx"
license = ""

[lib]
name = "vcx"
path = "src/lib.rs"
crate-type = ["staticlib","rlib", "dylib"]

[features]
default = ["no_payments"]
pool_tests = []
no_payments = []
nullpay = []

# turn on release versioning
ci = []

[dependencies]
env_logger = "0.4.3"
log = "0.4"
log4rs = "0.8.0"
chrono = "0.4"
lazy_static = "0.2"
libc = "0.2.21"
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
json = "*"
serde_derive = "1.0"
url = "1.5.1"
reqwest = "0.8.5"
rust-base58 = "0.0.4"
rmpv = "0.4.0"
rmp = "0.8"
rmp-serde = "0.13.7"
base64 = "0.8.0"
openssl = "0.10"
num-traits = "0.2.0"
rust-indy-sdk = {git = "https://github.com/mikelodder7/rust-indy-sdk.git"}

[build-dependencies]
serde = "1.0"
json = "*"
toml = "0.4"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
tempfile = "2.2"
rusqlite = "0.13.0"

[package.metadata.deb]
maintainer = "Mark Hadley<mark.hadley@evernym.com>, Devin Fisher, Ryan Marsh, Doug Wightman"
copyright = "2018, Evernym Inc."
depends = "$auto, libindy (=1.4.0~533)"
extended-description = """\
"TODO DESCRIPTION"""
section = "admin"
revision = "338ad01"
priority = "optional"
assets = [
    ["target/debug/libvcx.so.*", "usr/lib/", "644"],
    ["include/vcx.h", "usr/share/libvcx/", "644"],
    ["scripts/provision_agent_keys.py", "usr/share/libvcx/", "655"]
]
maintainer-scripts = "./scripts"

