[package]

name = "libcxs"
version = "0.0.1"
authors = [ "Mark Hadley <mark.hadley@evernym.com>" ]
publish = false

[lib]
name = "cxs"
path = "src/lib.rs"
crate-type = ["staticlib","rlib", "dylib"]

[dependencies]
env_logger = "0.4.3"
log = "0.3"
lazy_static = "0.2"
libc = "0.2.21"
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
config = "0.6"
url = "1.5.1"
reqwest = "0.8"
mockito = "0.9.0"
rust-base58 = "0.0.4"

[dev-dependencies]
futures = "0.1"
hyper = "0.11"
tempfile = "2.2"
