[package]

name = "libcxs"
version = "0.1.543416"
authors = [ "Mark Hadley <mark.hadley@evernym.com>" ]
publish = false
description = "C callable library for libcxs"
license = ""

[lib]
name = "cxs"
path = "src/lib.rs"
crate-type = ["staticlib","rlib", "dylib"]

[dependencies]
env_logger = "0.4.3"
log = "0.3"
chrono = "0.4"
lazy_static = "0.2"
libc = "0.2.21"
rand = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
config = "0.6"
url = "1.5.1"
reqwest = "0.8"
rust-base58 = "0.0.4"
rmpv = "0.4.0"
rmp = "0.8"
rmp-serde = "0.13.7"
base64 = "0.8.0"
openssl = "0.9"

[dev-dependencies]
tempfile = "2.2"
rusqlcipher = "0.14.6"

[package.metadata.deb]
maintainer = "Mark Hadley<mark.hadley@evernym.com>, Devin Fisher, Ryan Marsh, Doug Wightman"
copyright = "2018, Evernym Inc."
depends = "$auto, systemd"
extended-description = """\
"TODO DESCRIPTION"""
section = "admin"
revision = "469b25d"
priority = "optional"
assets = [
    ["target/debug/libcxs.so.*", "usr/lib/", "644"]
]
maintainer-scripts = "./scripts"

