[package]
name = "indy-api-types"
version = "0.1.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
lazy_static = "1.3"
libc = "0.2.60"
log = "0.4.8"
openssl = { version = "0.10"}
rust-base58 = "0.0.4"
rusqlite = "0.20" # Make sure rusqlite for android is also bumped with this. Rusqlite for android is at the bottom of this document.
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
zmq = "0.9.1"

[dependencies.ursa]
version =  "0.3.0"
default-features = false

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
rusqlite = { version = "0.20", features=["bundled"] }
