[package]
name = "indy-api-types"
version = "0.1.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["casting_errors"]
casting_errors = ["openssl", "rust-base58", "zmq", "ursa", "sqlx"]

[dependencies]
failure = "0.1.6"
futures = "0.3.1"
libc = "0.2.66"
log = "0.4.8"
openssl = {version = "0.10", optional = true}
rust-base58 = {version = "0.0.4", optional = true}
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
sqlx = { version = "0.4.2", git = "https://github.com/jovfer/sqlx", branch = "feature/json_no_preserve_order", features = [ "sqlite", "json_no_preserve_order", "runtime-async-std-native-tls" ], optional = true }
zmq = {version = "0.9.1", optional = true}

[dependencies.ursa]
version =  "0.3.2"
optional = true
features = ["logger"]

#[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
#rusqlite = { version = "0.20", features=["bundled"], optional = true }
