[package]
name = "indy-api-types"
version = "0.1.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["casting_errors"]
casting_errors = ["openssl", "rust-base58", "rusqlite", "zmq", "ursa", "rusqlite"]

[dependencies]
failure = "0.1.6"
libc = "0.2.66"
log = "0.4.8"
openssl = {version = "0.10", optional = true}
rust-base58 = {version = "0.0.4", optional = true}
rusqlite = {version = "0.25.3", optional = true}  # Make sure rusqlite for android is also bumped with this. Rusqlite for android is at the bottom of this document.
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
zmq = {version = "0.9.1", optional = true}

[dependencies.ursa]
version =  "0.3.2"
optional = true
features = ["logger"]

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
rusqlite = { version = "0.25.3", features=["bundled"], optional = true }
