[package]
name = "indy-utils"
version = "0.1.0"
authors = ["Sergey Minaev <sergey.minaev@dsr-corporation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
indy-api-types = { path = "../indy-api-types"}
lazy_static = "1.3"
libc = "0.2.60"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
time = "0.1.42"
ursa = "0.2.0-dev-5"