[package]
name = "indy-utils"
version = "0.1.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["base64_rust_base64", "chacha20poly1305_ietf_sodium", "pwhash_argon2i13_sodium", "hmacsha256_sodium", "hash_openssl"]
base64_rust_base64 = []
chacha20poly1305_ietf_sodium = []
pwhash_argon2i13_sodium = []
hmacsha256_sodium = []
hash_openssl = []

[dependencies]
base64 = {version = "0.10.1"}
dirs = "2.0.2"
failure = "0.1.5"
indy-api-types = { path = "../indy-api-types"}
lazy_static = "1.3"
libc = "0.2.60"
log = "0.4.8"
openssl = { version = "0.10" }
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
sodiumoxide = {version = "0.0.16"}
time = "0.1.42"
ursa = "0.2.0"
