[package]
name = "indy-utils"
version = "0.1.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["base64_rust_base64", "ed25519_sign_sodium", "ed25519_box_sodium", "sealedbox_sodium", "base64_rust_base64", "xsalsa20_sodium", "chacha20poly1305_ietf_sodium", "hash_openssl", "pwhash_argon2i13_sodium", "hmacsha256_sodium", "randombytes_sodium"]
base64_rust_base64 = []
ed25519_sign_sodium = []
ed25519_box_sodium = []
sealedbox_sodium = []
xsalsa20_sodium = []
chacha20poly1305_ietf_sodium = []
pwhash_argon2i13_sodium = []
hmacsha256_sodium = []
hash_openssl = []
randombytes_sodium = []

[dependencies]
base64 = {version = "0.10.1"}
dirs = "2.0.2"
failure = "0.1.6"
indy-api-types = { path = "../indy-api-types"}
lazy_static = "1.3"
libc = "0.2.66"
log = "0.4.8"
openssl = { version = "0.10" }
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
sodiumoxide = {version = "0.0.16"}
zeroize = "1.0.0"

[dev-dependencies]
rmp-serde = "0.13.7"
rand = "0.7.0"
