[package]
name = "check_zmq"
version = "1.0.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
edition = "2018"

description = "This is tool for checking zmq connection"
license = "MIT/Apache-2.0"

[dependencies]
ansi_term = "0.11"
zmq = "0.9.2"
base64 = {version = "0.10.1"}
rust-base58 = "0.0.4"
failure = "0.1.6"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"

[dependencies.ursa]
version = "0.3.2"
default-features = false
features = ["ed25519", "x25519"]