[package]
name = "indy-dummy-agent"
version = "0.1.0"
authors = ["Vyacheslav Gudkov <vyacheslav.gudkov@dsr-company.com>"]
exclude = ['config/*']

[dependencies]
actix = "0.7"
actix-web = "0.7"
bytes = "0.4.10"
failure = "0.1.2"
futures = "0.1.24"
hyper = "0.12.12"
lazy_static = "0.2"
log = "0.4.5"
pretty_env_logger = "0.2.4"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.28"
rand = "0.3"
regex = "1.1.0"
rmp-serde = "0.13.7"
rust-base58 = "0.0.4"
base64 = "0.6.0"
indy = { path = "../../wrappers/rust" }

[dev-dependencies]
dirs = "1.0.4"
tokio-core = "0.1.17"
