[package]
name = "indy-dummy-agent"
version = "0.1.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
exclude = ['config/*']
edition = '2018'

[dependencies]
actix = "0.8.3"
actix-web = "1.0.7"
bytes = "0.4.10"
failure = "0.1.6"
futures = "0.1.24"
hyper = "0.12.12"
lazy_static = "0.2"
log = "0.4.5"
pretty_env_logger = "0.2.4"
serde = "1.0.97"
serde_derive = "1.0.97"
serde_json = "1.0.40"
rand = "0.3"
regex = "1.1.0"
rmp-serde = "0.13.7"
rust-base58 = "0.0.4"
base64 = "0.6.0"
reqwest = "0.9.20"
uuid = "0.7.4"
indy = { path = "../../wrappers/rust" }
libloading = "0.5.0"
libc = "0.2.66"
envconfig = "0.6.0"
envconfig_derive = "0.6.0"



[dev-dependencies]
dirs = "1.0.4"
tokio-core = "0.1.17"
