[package]

name = "libvcx"
version = "0.7.0"
authors = ["Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>"]
publish = false
description = "This is the official SDK for Evernym's VCX"
license = "Apache-2.0"

[lib]
name = "vcx"
path = "src/lib.rs"
crate-type = ["staticlib","rlib", "cdylib"]

[features]
default = []
pool_tests = []
agency = []
agency_v2 = []
aries = []
# Causes the build to fail on all warnings
fatal_warnings = []

# turn on release versioning
ci = []

[dependencies]
env_logger = "0.5.10"
log = "0.4"
chrono = "0.4"
time = "0.1.36"
lazy_static = "1.3"
libc = "=0.2.66"
rand = "0.3"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
url = "1.5.1"
reqwest = "0.9.5"
regex = "1.1.0"
rust-base58 = "0.0.4"
rmp-serde = "0.13.7"
base64 = "0.8.0"
openssl = "0.10"
num-traits = "0.2.0"
indy = { version = "1.14.3", path = "../../wrappers/rust/" }
indy-sys = { version = "1.14.3", path = "../../wrappers/rust/indy-sys/" }
tokio-threadpool = "0.1.6"
futures = "0.1.23"
libloading = "0.5.0"
uuid = {version = "0.7.1", default-features = false, features = ["v4"]}
failure = "0.1.6"
strum = "0.16.0"
strum_macros = "0.16.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.5"

[build-dependencies]
serde = "1.0"
json = "*"
toml = "0.4"
serde_json = "1.0"
serde_derive = "1.0"

[package.metadata.deb]
maintainer = "Evernym, Inc."
copyright = "2018, Evernym Inc."
depends = "$auto, libindy (=1.14.3)"
extended-description = """\
This is Evernym's SDK for managing Verifiable Credential eXchange against an Indy network. For specific instructions on building see the README in the corresponding github repo https://github.com/evernym/sdk"""
section = "admin"
revision = "338ad01"
priority = "optional"
assets = [
    ["target/debug/libvcx.so.*", "usr/lib/", "644"],
    ["include/vcx.h", "usr/share/libvcx/", "644"],
    ["scripts/provision_agent_keys.py", "usr/share/libvcx/", "655"]
]
maintainer-scripts = "./scripts"

[profile.release]
debug = true
panic = 'unwind'
incremental = false
